# InteropExamples

./: .gitignore  CMakeLists.txt
managed/: InteropExamples.sln
managed/DummyLib.Wrapper/: DummyLib.Wrapper.csproj  DummyLibPINVOKE.cs  solution.txt
managed/Example1/: Program.cs
managed/Example1/Properties/: launchSettings.json
managed/ExampleBlittableType/: Program.cs
managed/ExampleBlittableType/Properties/: launchSettings.json
managed/ExampleNonBlittableType/: Program.cs
managed/ExampleNonBlittableType/Properties/: launchSettings.json
managed/ExampleStrings/: ExampleStrings.csproj  Program.cs
managed/ExampleStrings/Properties/: launchSettings.json
managed/ExampleStruct/: ExampleStruct.csproj  Program.cs
managed/ExampleStruct/Properties/: launchSettings.json
native/DummyLib/: CMakeLists.txt
native/DummyLib/include/: ExampleFunctions.h
native/DummyLib/src/: ExampleFunctions.cpp
